--- a/public/css/login/login.css
+++ b/public/css/login/login.css
@@ -1,26 +1,53 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Inter', sans-serif;
-}
-
-body {
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #f5f5f5;
-    padding: 20px;
-}
-
 .login-card {
     background: white;
     border-radius: 20px;
     padding: 3rem 2rem;
     width: 100%;
-    max-width: 420px;
     box-shadow: 0 20px 40px rgba(0, 0, 0, 0.08);
+}
+
+
+@media (max-width: 1370px) {
+    .login-card {
+        background: white;
+        border-radius: 20px;
+        padding: 1.2rem 2rem;
+        width: 100%;
+
+        box-shadow: 0 20px 40px rgba(0, 0, 0, 0.08);
+    }
+
+    .brand {
+        text-align: center;
+        margin-bottom: 1rem !important;
+    }
+
+    .brand img {
+        width: 6rem !important;
+    }
+
+    .form-group {
+        margin-bottom: 1rem;
+        position: relative;
+    }
+}
+
+@media (max-width: 768px) {
+    .login-card {
+        background: white;
+        border-radius: 20px;
+        padding: 1rem 1rem;
+        width: 100%;
+
+        box-shadow: 0 20px 40px rgba(0, 0, 0, 0.08);
+    }
+
+
+
+}
+
+.brand img {
+    width: 14rem;
 }
 
 .brand {
@@ -55,7 +82,7 @@ body {
 .form-group label {
     display: block;
     margin-bottom: 0.5rem;
-    color: #333;
+    color: #333 !important;
     font-size: 0.9rem;
     font-weight: 500;
 }
@@ -67,6 +94,8 @@ body {
     border-radius: 12px;
     font-size: 1rem;
     transition: all 0.3s ease;
+    color: #000 !important;
+
 }
 
 .form-group input:focus {
@@ -74,6 +103,8 @@ body {
     border-color: #000;
     box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.1);
 }
+
+
 
 .remember-forgot {
     display: flex;
@@ -190,6 +221,12 @@ body {
     color: #000;
     text-decoration: none;
     font-weight: 600;
+}
+
+.signup-link p {
+    color: #000;
+    text-decoration: none;
+    font-weight: 400;
 }
 
 .signup-link a:hover {
