validaciones para formulario registor de postulantes

--- a/public/css/colors.css
+++ b/public/css/colors.css
@@ -8,6 +8,8 @@
     --light-bg: #E5F4FF;
     --light-text: #1A202C;
     --light-accent: #3B82F6;
+    --light-secondary-hover: #f7c25f;
+
     /* SKELETON */
     --light-skeleton-primary: #eee;
     --light-skeleton-secondary: #ddd;
