--- a/resources/css/global.css
+++ b/resources/css/global.css
@@ -75,6 +75,12 @@ h1 {
     transition: transform 0.2s;
 }
 
+.theme-icon{
+    width: 24px;
+    height: 24px;
+    display: block;
+    margin: auto;
+}
 
 
 /* DROPDOWN - SELECT */
