--- a/resources/css/global.css
+++ b/resources/css/global.css
@@ -12,7 +12,9 @@ h1 {
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
-
+.main-page-auth{
+    margin: 5rem 1rem; 
+}
 
 /* BUTTON */
 .btn-primary {
