--- a/public/css/app.css
+++ b/public/css/app.css
@@ -653,6 +653,9 @@ video {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
+.text-center{
+  text-align: center;
+}
 .font-bold{
   font-weight: 700;
 }
