--- a/resources/css/colors.css
+++ b/resources/css/colors.css
@@ -3,12 +3,13 @@
 :root {
 
     /* LIGHT COLORS */
-    --light-primary-bg: #00b1f4;
-    --light-secondary-bg: #ffa700;
+    --light-primary-bg: #ffa700;
+    --light-secondary-bg: # 3B82F6;
+    --light-primary-hover: #f7c25f;
+    --light-secondary-hover: #00b1f4;
     --light-bg: #E5F4FF;
     --light-text: #1A202C;
-    --light-accent: #3B82F6;
-    --light-secondary-hover: #f7c25f;
+
 
     /* SKELETON */
     --light-skeleton-primary: #eee;
@@ -17,6 +18,7 @@
     /* DARK COLORS */
     --dark-primary-bg: #15171c;
     --dark-secondary-bg: #333;
+    --dark-secondary-bg-transparent: #333333a0;
     --dark-text: #FFFFFF;
     --dark-accent: #00b1f4;
 
@@ -26,6 +28,7 @@
 
     /* STANDARD COLORS */
     --menu-active: #ff5100;
+    --menu-hover: #ffa60080;
     --text-secondary: #858b89;
     --error: #dc3545;
 
