--- a/resources/css/global.css
+++ b/resources/css/global.css
@@ -107,7 +107,7 @@ h1 {
 }
 
 .modal-content {
-    background: white;
+    background: white !important;
     padding: 20px;
     border-radius: 10px;
     max-width: 600px;
