--- a/public/css/app.css
+++ b/public/css/app.css
@@ -589,6 +589,15 @@ video {
 .relative{
   position: relative;
 }
+.top-0{
+  top: 0px;
+}
+.start-0{
+  inset-inline-start: 0px;
+}
+.m-4{
+  margin: 1rem;
+}
 .mx-3{
   margin-left: 0.75rem;
   margin-right: 0.75rem;
@@ -618,6 +627,30 @@ video {
 .mt-6{
   margin-top: 1.5rem;
 }
+.me-1{
+  margin-inline-end: 0.25rem;
+}
+.me-auto{
+  margin-inline-end: auto;
+}
+.mb-0{
+  margin-bottom: 0px;
+}
+.mb-3{
+  margin-bottom: 0.75rem;
+}
+.mb-5{
+  margin-bottom: 1.25rem;
+}
+.mt-4{
+  margin-top: 1rem;
+}
+.ms-1{
+  margin-inline-start: 0.25rem;
+}
+.me-3{
+  margin-inline-end: 0.75rem;
+}
 .block{
   display: block;
 }
@@ -645,8 +678,20 @@ video {
 .transform{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
+.flex-row{
+  flex-direction: row;
+}
 .flex-wrap{
   flex-wrap: wrap;
+}
+.flex-nowrap{
+  flex-wrap: nowrap;
+}
+.overflow-auto{
+  overflow: auto;
+}
+.overflow-hidden{
+  overflow: hidden;
 }
 .overflow-x-auto{
   overflow-x: auto;
@@ -668,11 +713,27 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity, 1));
 }
+.bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+.bg-opacity-10{
+  --tw-bg-opacity: 0.1;
+}
+.bg-opacity-25{
+  --tw-bg-opacity: 0.25;
+}
+.bg-opacity-50{
+  --tw-bg-opacity: 0.5;
+}
 .p-4{
   padding: 1rem;
 }
 .p-6{
   padding: 1.5rem;
+}
+.p-0{
+  padding: 0px;
 }
 .px-4{
   padding-left: 1rem;
@@ -682,11 +743,41 @@ video {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
+.py-5{
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+.px-3{
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+.py-1{
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+.py-8{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+.py-4{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+.ps-4{
+  padding-inline-start: 1rem;
+}
 .text-left{
   text-align: left;
 }
 .text-center{
   text-align: center;
+}
+.align-text-top{
+  vertical-align: text-top;
 }
 .text-2xl{
   font-size: 1.5rem;
@@ -719,6 +810,16 @@ video {
 .shadow-none{
   --tw-shadow: 0 0 #0000;
   --tw-shadow-colored: 0 0 #0000;
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow-lg{
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow-sm{
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .outline{
